@@ -2638,6 +2638,60 @@ name|partition
 init|=
 literal|null
 decl_stmt|;
+for|for
+control|(
+name|FieldSchema
+name|field
+range|:
+name|tbl
+operator|.
+name|getPartCols
+argument_list|()
+control|)
+block|{
+name|String
+name|val
+init|=
+name|partSpec
+operator|.
+name|get
+argument_list|(
+name|field
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|val
+operator|==
+literal|null
+operator|||
+name|val
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|HiveException
+argument_list|(
+literal|"add partition: Value for key "
+operator|+
+name|field
+operator|.
+name|getName
+argument_list|()
+operator|+
+literal|" is null or empty"
+argument_list|)
+throw|;
+block|}
+block|}
 try|try
 block|{
 name|Partition
@@ -2801,7 +2855,7 @@ throw|throw
 operator|new
 name|HiveException
 argument_list|(
-literal|"Value for key "
+literal|"get partition: Value for key "
 operator|+
 name|field
 operator|.
